# how-to-itest

./: .gitignore  README.md  settings.gradle
db/cassandra/cassandra-simple/: build.gradle
db/dynamodb/bom-and-sdk/: README.md  build.gradle
db/milvus/: README.md
db/milvus/milvus-simple/: build.gradle
db/mongo/mongo-simple/: build.gradle
db/mongodb-kafka/: build.gradle
db/mysql/mysql-custom-jdbc-url/: build.gradle
db/postgres/multi-db/: build.gradle
db/postgres/postgres-r2dbc/: build.gradle
db/postgres/reusable-annotation/: build.gradle
db/postgres/reusable-annotation-demo/: build.gradle
db/postgres/simple/: build.gradle
fs/with-copy-per-test/: build.gradle
ftp/: build.gradle
ftp/src/itest/docker/: Dockerfile  README.md  vsftpd.conf
ftp/src/itest/resources/: application-itest.yaml
grpc/grpc-inside-tc/: build.gradle
grpc/grpc-simple-service/: build.gradle
grpc/grpc-with-spring-boot-starter/: build.gradle
includeBuild/: build.gradle
includeBuild/src/main/groovy/: conventions.gradle  spring-boot-conventions.gradle
messaging/aws/sqs-sns/sqs-sns-fanout/: build.gradle
messaging/aws/sqs-sns/sqs-sns-queue/: build.gradle
messaging/aws/sqs/sqs-simple/: build.gradle
misc/k3s/k3s-simple/: build.gradle
misc/mock-server/mock-server-simple/: build.gradle
nodejs/docker-compose/docker-compose-simple/: README.md  bun.lockb  compose.yaml  package.json
nodejs/docker-compose/docker-compose-simple/src/: db.js  example-service.js  (+1 more)
python/: README.md  pyproject.toml
python/tests/: example_test.py  private_repo_example.py  test_postgres.py
(+69 files in other folders)
