[tool.poetry]
name = "how_to_itest_in_python"
version = "0.0.1"
description = "testcontainers, python edition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-mock = "3.12.0"
testcontainers = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
